--- a/Project.toml
+++ b/Project.toml
@@ -13,7 +13,7 @@ Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 SpinGlassNetworks = "b7f6bd3e-55dc-4da6-96a9-ef9dbec6ac19"
 SpinGlassTensors = "7584fc6a-5a23-4eeb-8277-827aab0146ea"
-Noise = "81d43f40-5267-43b7-ae1c-8b967f377efa"
+Distributions  = "31c24e10-a181-5473-b8eb-7969acd0382f" 
 
 [compat]
 MKL = "0.4.2"
