--- a/Project.toml
+++ b/Project.toml
@@ -5,22 +5,19 @@ version = "0.0.1"
 
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-LabelledGraphs = "605abd48-4d17-4660-b914-d4df33194460"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Distributions  = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
-Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
-MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 SpinGlassNetworks = "b7f6bd3e-55dc-4da6-96a9-ef9dbec6ac19"
-SpinGlassTensors = "7584fc6a-5a23-4eeb-8277-827aab0146ea"
-Distributions  = "31c24e10-a181-5473-b8eb-7969acd0382f" 
 
 [compat]
+DifferentialEquations = "7.1.0"
 MKL = "0.4.2"
 julia = "1.7"
 
 [extras]
+SpinGlassTensors = "7584fc6a-5a23-4eeb-8277-827aab0146ea"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["SpinGlassTensors", "Test"]
