--- a/Project.toml
+++ b/Project.toml
@@ -1,23 +1,22 @@
 name = "SpinGlassDynamics"
 uuid = "860688e1-f392-4e7d-926f-90b454cb2079"
 authors = ["Bartłomiej Gardas <bartek.gardas@gmail.com>", "Konrad Jałowiecki <dexter2206@gmail.com>", "Łukasz Pawela <lukasz.pawela@gmail.com>"]
-version = "0.0.1"
+version = "0.0.2"
 
 [deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-LabelledGraphs = "605abd48-4d17-4660-b914-d4df33194460"
-LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+Distributions  = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
-Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
-MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 SpinGlassNetworks = "b7f6bd3e-55dc-4da6-96a9-ef9dbec6ac19"
-SpinGlassTensors = "7584fc6a-5a23-4eeb-8277-827aab0146ea"
-Distributions  = "31c24e10-a181-5473-b8eb-7969acd0382f" 
-CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 
 [compat]
+CUDA = "3.8"
+DifferentialEquations = "7.1"
+Distributions = "0.25"
 MKL = "0.4.2"
+SpinGlassNetworks = "0.3"
 julia = "1.7"
 
 [extras]
