--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,7 @@ version = "0.0.1"
 
 [deps]
 DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
-Distributions  = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 DocStringExtensions = "ffbed154-4ef7-542d-bbb7-c09d3a79fcae"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MKL = "33e6dc65-8f57-5167-99aa-e5a354878fb2"
@@ -15,7 +15,7 @@ SpinGlassNetworks = "b7f6bd3e-55dc-4da6-96a9-ef9dbec6ac19"
 DifferentialEquations = "7.1.0"
 Distributions = "0.25"
 DocStringExtensions = "0.8.6"
-MKL = "0.4.2"
+MKL = "0.4.2, 0.5"
 SpinGlassNetworks = "0.2, 0.3"
 julia = "1.7"
 
