--- a/Project.toml
+++ b/Project.toml
@@ -17,9 +17,9 @@ CUDA = "3.8"
 DifferentialEquations = "7.1"
 Distributions = "0.25"
 DocStringExtensions = "0.8.6"
-MKL = "0.4.2"
+MKL = "0.4, 0.5, 0.6"
 SpinGlassNetworks = "0.3"
-julia = "1.7"
+julia = "1.7, 1.8"
 
 [extras]
 SpinGlassTensors = "7584fc6a-5a23-4eeb-8277-827aab0146ea"
